fix white space for policy version text

--- a/public/css/specificrequeststyle.css
+++ b/public/css/specificrequeststyle.css
@@ -237,6 +237,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 10px 15px;
     margin-bottom: 20px;
+
 }
 
 .version-comments {
@@ -754,4 +755,8 @@ input[type="checkbox"] { /* change "blue" browser chrome to yellow */
 #changes-li-item {
     display: flex;
     align-items: flex-start;
+}
+
+.card-text {
+    white-space: break-spaces;
 }
